--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "node",
     "animation",
     "autoreload",
-	"refresh",
-	"workflow"
+    "refresh",
+    "workflow"
   ],
   "author": "Pierre Chamberlain",
   "license": "MIT",
   "private": true,
-  "homepage": "https://bitbucket.org/chamberlainpi/html5ads_launcher#readme",
+  "homepage": "https://github.com/bigp/zzzimple",
   "dependencies": {
     "anymatch": "^1.3.0",
     "async": "^1.5.2",
@@ -35,6 +35,7 @@
     "datauri": "^1.0.4",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "express-ws": "^2.0.0",
     "filewatcher": "^3.0.0",
     "imagemin": "^5.2.2",
     "imagemin-pngquant": "^5.0.0",
@@ -44,6 +45,7 @@
     "opn": "^4.0.2",
     "pad": "^1.0.0",
     "prompt": "^1.0.0",
+    "signals": "^1.0.0",
     "socket.io": "^1.4.6",
     "spritesmith": "^3.1.0",
     "sse": "^0.0.6",
