--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "datauri": "^1.0.4",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "express-handlebars": "^3.0.0",
     "express-ws": "^2.0.0",
     "filewatcher": "^3.0.0",
+    "handlebars": "^4.0.5",
     "imagemin": "^5.2.2",
     "imagemin-pngquant": "^5.0.0",
     "lodash": "^4.13.1",
